added social media links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>mystuff</title>
 </head>
 <body>
-    <h1>Namaste!</h1>
+    <h1>Namaste! It's me, Sukhdev</h1>
+    <li>
+        <ul>Github</ul>
+        <ul>LinkedIn</ul>
+        <ul>Repplit</ul>
+        <ul>YouTube</ul>
+        <ul>Facebook</ul>
+        <ul>Instagram</ul>
+        <ul>Twitter</ul>
+        <ul>Telegram</ul>
+        <ul>WhatsApp</ul>
+    </li>
 </body>
 </html>
