added social media links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Namaste! It's me, Sukhdev</h1>
-    <li>
+    <p>Hers's my social media links</p>
         <ul>Github</ul>
         <ul>LinkedIn</ul>
         <ul>Repplit</ul>
@@ -16,6 +16,5 @@
         <ul>Instagram</ul>
         <ul>Twitter</ul>
         <ul>Telegram</ul>
-    </li>
 </body>
 </html>
