added social media links

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>mystuff</title>
 </head>
 <body>
-    <h1>Namaste! It's me, Sukhdev</h1>
-    <p>Hers's my social media links</p>
+    <h1>Namaste! It's me, Sukhdev...</h1>
+    <p>Hers's my social media links:</p>
         <ul>Github</ul>
         <ul>LinkedIn</ul>
         <ul>Repplit</ul>
